# BMPeditor

./: CMakeLists.txt  Image.cpp  Image.h  customimagewidget.cpp  customimagewidget.h  documentation.md  main.cpp  mainwindow.cpp  mainwindow.h  styles.h
Filters/: Filter.cpp  Filter.h  FlipFilter.cpp  FlipFilter.h  InvertFilter.cpp  InvertFilter.h  RotateFilter.cpp  RotateFilter.h
